--- a/Views/Home/FizzBuzzPage.cshtml
+++ b/Views/Home/FizzBuzzPage.cshtml
@@ -1,1 +1,81 @@
-﻿<h1>Fizz Buzz</h1>
+﻿@model FizzBuzz_MVC.Models.FizzBuzz
+
+@{
+    ViewData["Title"] = "Fizz Buzz";
+}
+
+<div class="row gy-2 h-100">
+    <div class="card shadow-lg col-md-12">
+        <div class="card-body">
+            <div class="row row-cols-md-2 row-cols-1">
+                <div class="col col-md-4 border-2 border-end">
+                    <h1 class="fw-bold lh-1 mb-3">FizzBuzz</h1>
+                    <h4 class="lead">
+                        This application will consider the two numbers entered and for each number between 1 and 100.
+                        It will print FIZZ for the numbers that are divisible by the first number.  BUZZ will be printed
+                        for the numbers divisible by the second number.  FIZZBUZZ for the numbers divisible by both and
+                        simply print the number if it is not divisible by either.
+                    </h4>
+
+                    <h2 class="mt-5 border-bottom border-2">Instructions</h2>
+                    <p>
+                        Enter 2 numbers.  The first number will be used to evaluate Fizz.
+                        The second number will be used to evaluate Buzz and FizzBuzz will be determined based on
+                        the combination of teh two numbers.
+                    </p>
+                </div>
+                <div class="col col-md-8">
+                    <div class="col col-md-3 mb-2">
+                        <h5>Enter numbers</h5>
+                        <form asp-controller="Home" asp-action="FizzBuzzPage" method="post">
+                            <div class="form-group">
+                                <label asp-for="FizzValue">Fizz Value</label>
+                                <input type="number" min="1" asp-for="FizzValue" class="form-control" placeholder="Enter Fizz" required />
+                            </div>
+                            <div class="form-group">
+                                <label asp-for="BuzzValue">Buzz Value</label>
+                                <input type="number" min="1" asp-for="BuzzValue" class="form-control" placeholder="Enter Buzz" required />
+                            </div>
+                            <div class="form-group mt-3">
+                                <button type="submit" class="btn btn-dark">Submit</button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col">
+                        <h2 class="mt-5 border-bottom border-2">Results</h2>
+                        <div class="table-responsive">
+                            @if (Model.Results.Count > 0)
+                            {
+                                <table class="table-striped table-hover table table-dark">
+                                    <thead>
+                                        <tr>
+                                            <th colspan="10">Fizz Buzz Results</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        @for (int i = 0; i < Model.Results.Count(); i += 10)
+                                        {
+                                            <tr>
+                                                <td data-color-code="@(Model.Results[i].ToString().ToLower())">@Model.Results[i]</td>
+                                                <td data-color-code="@(Model.Results[i + 1].ToString().ToLower())">@Model.Results[i + 1]</td>
+                                                <td data-color-code="@(Model.Results[i + 2].ToString().ToLower())">@Model.Results[i + 2]</td>
+                                                <td data-color-code="@(Model.Results[i + 3].ToString().ToLower())">@Model.Results[i + 3]</td>
+                                                <td data-color-code="@(Model.Results[i + 4].ToString().ToLower())">@Model.Results[i + 4]</td>
+                                                <td data-color-code="@(Model.Results[i + 5].ToString().ToLower())">@Model.Results[i + 5]</td>
+                                                <td data-color-code="@(Model.Results[i + 6].ToString().ToLower())">@Model.Results[i + 6]</td>
+                                                <td data-color-code="@(Model.Results[i + 7].ToString().ToLower())">@Model.Results[i + 7]</td>
+                                                <td data-color-code="@(Model.Results[i + 8].ToString().ToLower())">@Model.Results[i + 8]</td>
+                                                <td data-color-code="@(Model.Results[i + 9].ToString().ToLower())">@Model.Results[i + 9]</td>
+                                            </tr>
+                                        }
+                                    </tbody>
+                                </table>
+                            }
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
